feat: start integrating Hazelcast and add Guice modules